[package]
name = "wrap"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
futures = "0.3.4"
futures-util = "0.3.4"
num_cpus = "1.13.0"
smol = { version = "0.1", features = ["tokio02"] }

